<resources>
    <string name="app_name">Fortune Freezy</string>
    <string name="text_loading">LOADING...</string>
    <string name="btn_accept">btn_accept</string>
    <string name="text_privacy">Privacy policy and terms</string>
    <string name="text_menu">Welcome to the Excitement</string>
    <string name="text_description">Discover a world where every spin, roll, and card dealt brings you closer to thrilling wins and endless entertainment.</string>
    <string name="btn_play">btn_play</string>
    <string name="btn_exit">btn_exit</string>
    <string name="btn_settings">btn_settings</string>
    <string name="btn_game_first">btn_game_first</string>
    <string name="btn_game_second">btn_game_second</string>
    <string name="btn_game_three">btn_game_three</string>
    <string name="btn_game_four">btn_game_four</string>
    <string name="btn_game_fife">btn_game_fife</string>
    <string name="btn_game_six">btn_game_six</string>
    <string name="btn_game_seven">btn_game_seven</string>
    <string name="btn_game_eight">btn_game_eight</string>
    <string name="btn_back">btn_back</string>
    <string name="text_sound">SOUND</string>
    <string name="text_music">MUSIC</string>
    <string name="btn_reset_score">btn_reset_score</string>
    <string name="default_total_balance">10000</string>
    <string name="btn_continue">btn_continue</string>
    <string name="btn_restart">btn_restart</string>
    <string name="text_lose_score">0</string>
    <string name="text_win_score">300</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_game_first">SlotsGame</string>
    <string name="title_game_second">MinerGame</string>
    <string name="title_game_three">WheelGame</string>
    <string name="title_game_four">WheelFourGame</string>
    <string name="title_game_fife">MinerFifeGame</string>
    <string name="default_win">WIN\n0</string>
    <string name="default_total">Total\n10000</string>
    <string name="default_bet">BET\n300</string>
    <string name="btn_minus_bet">btn_minus_bet</string>
    <string name="btn_plus_bet">btn_plus_bet</string>
    <string name="btn_spin">btn_spin</string>
    <string name="arrow_wheel">arrow_wheel</string>
    <string name="wheel_scene">wheel_scene</string>
    <string name="btn_first_set_stake">btn_first_set_stake</string>
    <string name="btn_second_set_stake">btn_second_set_stake</string>
    <string name="btn_three_set_stake">btn_three_set_stake</string>
    <string name="btn_four_set_stake">btn_four_set_stake</string>
    <string name="btn_fife_set_stake">btn_fife_set_stake</string>
    <string name="btn_six_set_stake">btn_six_set_stake</string>
    <string name="btn_slots_first">btn_slots_first</string>
    <string name="sourcebanner">sourceBanner</string>
    <string name="btnclose">btnClose</string>
</resources>