<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_fragment_game"
    app:startDestination="@id/game_slots_first">

    <fragment
        android:id="@+id/game_slots_first"
        android:name="com.forrtun.frreezy.game.ui.scene.games.SlotsFirstGameFragment"
        android:label="@string/title_game_first"
        tools:layout="@layout/fragment_slots_first_game" />

    <fragment
        android:id="@+id/game_miner_second"
        android:name="com.forrtun.frreezy.game.ui.scene.games.MinerSecondGameFragment"
        android:label="@string/title_game_second"
        tools:layout="@layout/fragment_miner_second_game" />

    <fragment
        android:id="@+id/game_wheel_three"
        android:name="com.forrtun.frreezy.game.ui.scene.games.WheelThreeGameFragment"
        android:label="@string/title_game_three"
        tools:layout="@layout/fragment_wheel_three_game" />

    <fragment
        android:id="@+id/game_wheel_four"
        android:name="com.forrtun.frreezy.game.ui.scene.games.WheelFourGameFragment"
        android:label="@string/title_game_four"
        tools:layout="@layout/fragment_wheel_four_game" />

    <fragment
        android:id="@+id/game_miner_fife"
        android:name="com.forrtun.frreezy.game.ui.scene.games.MinerFifeGameFragment"
        android:label="@string/title_game_fife"
        tools:layout="@layout/fragment_miner_fife_game" />

</navigation>