<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_privacy"
    android:orientation="vertical"
    tools:context=".ui.menu.MenuGamesActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu_control_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_exit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/btn_exit"
            android:clickable="true"
            android:contentDescription="@string/btn_exit"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_settings"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_settings"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/btn_settings"
            android:clickable="true"
            android:contentDescription="@string/btn_settings"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu_game_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_control_top">

        <ImageView
            android:id="@+id/btn_game_first"
            android:layout_width="185dp"
            android:layout_height="165dp"
            android:layout_margin="@dimen/dp15"
            android:background="@drawable/btn_game_first"
            android:clickable="true"
            android:contentDescription="@string/btn_game_first"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_game_second"
            android:layout_width="185dp"
            android:layout_height="165dp"
            android:layout_margin="@dimen/dp15"
            android:background="@drawable/btn_game_second"
            android:clickable="true"
            android:contentDescription="@string/btn_game_second"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_game_three"
            android:layout_width="185dp"
            android:layout_height="165dp"
            android:layout_margin="@dimen/dp15"
            android:background="@drawable/btn_game_three"
            android:clickable="true"
            android:contentDescription="@string/btn_game_three"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_game_first" />

        <ImageView
            android:id="@+id/btn_game_four"
            android:layout_width="185dp"
            android:layout_height="165dp"
            android:layout_margin="@dimen/dp15"
            android:background="@drawable/btn_game_four"
            android:clickable="true"
            android:contentDescription="@string/btn_game_four"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_game_second" />

        <ImageView
            android:id="@+id/btn_game_fife"
            android:layout_width="185dp"
            android:layout_height="165dp"
            android:layout_margin="@dimen/dp15"
            android:background="@drawable/btn_game_fife"
            android:clickable="true"
            android:contentDescription="@string/btn_game_fife"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_game_four" />


        <ImageView
            android:id="@+id/btn_game_six"
            android:layout_width="185dp"
            android:layout_height="165dp"
            android:layout_margin="@dimen/dp15"
            android:background="@drawable/btn_game_six"
            android:clickable="true"
            android:contentDescription="@string/btn_game_six"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_game_four" />

        <ImageView
            android:id="@+id/btn_game_seven"
            android:layout_width="185dp"
            android:layout_height="165dp"
            android:layout_margin="@dimen/dp15"
            android:background="@drawable/btn_game_seven"
            android:clickable="true"
            android:contentDescription="@string/btn_game_seven"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_game_fife" />

        <ImageView
            android:id="@+id/btn_game_eight"
            android:layout_width="185dp"
            android:layout_height="165dp"
            android:layout_margin="@dimen/dp15"
            android:background="@drawable/btn_game_eight"
            android:clickable="true"
            android:contentDescription="@string/btn_game_eight"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_game_six" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>