<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background_three_wheel_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_three_wheel_game"
    tools:context=".view.ui.scene.games.wheels.WheelThreeGameFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/control_game"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/btn_back"
            android:clickable="true"
            android:contentDescription="@string/btn_back"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_win"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/background_win_three"
            android:fontFamily="@font/aleo_bold"
            android:padding="@dimen/dp8"
            android:paddingStart="@dimen/dp30"
            android:text="@string/default_win"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/sp12"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/text_balance"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/text_balance"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/background_win_three"
            android:fontFamily="@font/aleo_bold"
            android:padding="@dimen/dp8"
            android:paddingStart="@dimen/dp30"
            android:text="@string/default_total"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/sp12"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/btn_plus"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:clickable="true"
            android:contentDescription="@string/btn_plus_bet"
            android:focusable="true"
            android:src="@drawable/btn_plus_second_bet"
            app:layout_constraintBottom_toBottomOf="@+id/text_bet"
            app:layout_constraintStart_toEndOf="@+id/text_bet"
            app:layout_constraintTop_toTopOf="@+id/text_bet" />

        <ImageView
            android:id="@+id/btn_minus"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:clickable="true"
            android:contentDescription="@string/btn_minus_bet"
            android:focusable="true"
            android:src="@drawable/btn_minus_second_bet"
            app:layout_constraintBottom_toBottomOf="@+id/text_bet"
            app:layout_constraintEnd_toStartOf="@+id/text_bet"
            app:layout_constraintTop_toTopOf="@+id/text_bet" />

        <TextView
            android:id="@+id/text_bet"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_textview_three"
            android:fontFamily="@font/aleo_bold"
            android:padding="@dimen/dp13"
            android:text="@string/default_bet"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/sp18"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/text_balance"
            app:layout_constraintStart_toStartOf="@+id/text_win"
            app:layout_constraintTop_toBottomOf="@+id/text_balance"
            tools:ignore="RtlSymmetry" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/control_bar_game"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/control_game">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scene_game"
            android:layout_width="240dp"
            android:layout_height="300dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/wheel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/wheel_scene"
                android:src="@drawable/wheel_2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/arrow_wheel"
                android:src="@drawable/arrow_wheel"
                app:layout_constraintBottom_toBottomOf="@+id/wheel"
                app:layout_constraintEnd_toEndOf="@+id/wheel"
                app:layout_constraintStart_toStartOf="@+id/wheel"
                app:layout_constraintTop_toTopOf="@+id/wheel" />

            <ImageView
                android:id="@+id/win_coeff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/arrow_wheel"
                android:src="@drawable/circle_win_1"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/arrow"
                app:layout_constraintEnd_toEndOf="@+id/wheel"
                app:layout_constraintStart_toStartOf="@+id/wheel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/btn_spin"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="@dimen/dp10"
            android:clickable="true"
            android:contentDescription="@string/btn_spin"
            android:focusable="true"
            android:src="@drawable/btn_spin_three"
            app:layout_constraintEnd_toEndOf="@+id/scene_game"
            app:layout_constraintStart_toStartOf="@+id/scene_game"
            app:layout_constraintTop_toBottomOf="@+id/scene_game" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>