<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_menu"
    tools:context=".ui.menu.MenuActivity">

    <TextView
        android:id="@+id/text_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/aleo_bold"
        android:gravity="center_horizontal"
        android:text="@string/text_menu"
        android:textColor="@color/white"
        android:textSize="@dimen/sp45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/aleo"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="8dp"
        android:text="@string/text_description"
        android:textColor="@color/white"
        android:textSize="@dimen/sp15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_menu" />

    <ImageView
        android:id="@+id/btn_play"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_play"
        android:clickable="true"
        android:contentDescription="@string/btn_play"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_description" />

</androidx.constraintlayout.widget.ConstraintLayout>